--- a/views/crm_lead.xml
+++ b/views/crm_lead.xml
@@ -11,4 +11,17 @@
 
         </field>
     </record>
+
+    <record id="crm_lead_view_form_inherit" model="ir.ui.view">
+        <field name="name">crm.lead.form.inherit</field>
+        <field name="model">crm.lead</field>
+        <field name="inherit_id" ref="crm.crm_lead_view_form"/>
+        <field name="arch" type="xml">
+
+            <xpath expr="//form/sheet/notebook" position="after">
+                <field name="formio_this_model_id" invisible="1"/>
+            </xpath>
+
+        </field>
+    </record>
 </odoo>
