fix the issue #10

--- a/views/project.xml
+++ b/views/project.xml
@@ -5,9 +5,12 @@
         <field name="inherit_id" ref="project.edit_project"/>
         <field name="arch" type="xml">
 
-            <xpath expr="//header" position="inside">
-                <field name="hide_open_form_button" invisible="1"/>
-                <button string="Open Form" name="action_open_form" type="object" class="btn-primary" attrs="{'invisible': [('hide_open_form_button', '=', True)]}"/>
+            <xpath expr="//form" position="attributes">
+                <attribute name="js_class">project_form_view</attribute>
+            </xpath>
+
+            <xpath expr="//sheet" position="inside">
+                <field name="hide_open_form_button"/>
             </xpath>
 
         </field>
